--- a/.github/workflows/form-web.yml
+++ b/.github/workflows/form-web.yml
@@ -6,7 +6,7 @@ name: form-flow-web-deploy-dev
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ deplo ]
     paths:
       - "forms-flow-web/**"
 
